--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -324,7 +324,7 @@ Now the natural way to measure distance between two points $x,y\in{\mathbb R}$  
  distance between two points $\v x = (x_1,x_2), \v y = (y_1,y_2)\in{\mathbb R}^2,$  then the natural way is 
 $$d(\v x, \v y) = \sqrt{(x_1-y_1)^2+(x_2-y_2)^2}.$$
 So we should update the definition of neighbourhood in ${\mathbb R}^2$  accordingly:
-$$N_2(\v c,r):=\{\v x\in{\mathbb R}^2~:~f(\v x,\v c)&lt;r\}.$$
+$$N_2(\v c,r):=\{\v x\in{\mathbb R}^2~:~d(\v x,\v c)&lt;r\}.$$
 Pictorially, this is the disc (without the circumference) of radius $r$  centred at $\v c.$  If we plug $N_2(\cdot, \cdot)$ 
  in place of $N_1(\cdot, \cdot)$  approparitely in the definition of continuity from real analysis, we shall get the
  following definition:
