--- a/prob2_2026/contabs.html
+++ b/prob2_2026/contabs.html
@@ -272,7 +272,7 @@ Let $X$  have a density $f(x).$  Then
 
 <li>$\forall a\in{\mathbb R}~~P(X &lt; a)  = P(X\leq a)=\int_ \infty^a f(x)\, dx.$</li>
 
-<li>$\int_ \infty^ \infty f(x)\, dx = 1.$</li>
+<li>$\int_{-\infty}^ \infty f(x)\, dx = 1.$</li>
 
 </ol>
 
@@ -906,7 +906,7 @@ We pick one element at random and follow it until it dies.  Let $X$  be the age 
  at a given age. This gives rise to the following definition.
 <fieldset>
 <legend><b>Definition: Hazard rate</b></legend>
-If a non-negative $X$  has density $f$  and CDF $F,$  then its its <b><font color="red" size="40">hazard rate</font></b>  at time $t\leq 0$ 
+If a non-negative $X$  has density $f$  and CDF $F,$  then its its <b><font color="red" size="40">hazard rate</font></b>  at time $t\geq 0$ 
  is 
 $$h(t) = \frac{f(t)}{1-F(t)},$$
 when $F(t) &lt; 1.$  Here we are assuming that $f$  is continuous at all values of $t$  where we are computing
