--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -1271,7 +1271,7 @@ $$P(X_{i_1}\in B_1, ..., X_{i_k}\in B_k) = P(X_{i_1}\in B_1)\times\cdots P( X_{i
 </fieldset> 
 Incidentally, it is not enough to have $P(X_i\in B_i, X_j\in B_j) = P(X_i\in B_i)P( X_j\in B_j)$  for all $i\neq j.$ 
  If only this holds, then we call $X_1,...,X_n$  only <b><font color="red" size="40">pairwise independent</font></b>, which is weaker than mutual
- independent.
+ independence.
 <p></p>
 So in particular if $X,Y$  are independent, then 
 $$\forall x,y\in{\mathbb R}~~P(X\leq x,\, Y\leq y) = P(X\leq x)\times P(Y\leq y).$$
