--- a/cbook/index.html
+++ b/cbook/index.html
@@ -5,9 +5,6 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
-
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -162,14 +159,26 @@ function myFunction() {
 <hr/>
 
 <title xmlns="">C Programming</title>
-আমার C Programming  বইয়ের webpage  এটা৷ তিনরকম জিনিস পাবে এখানে--
+আমার C Programming  বইয়ের webpage  এটা৷ চাররকম জিনিস পাবে এখানে--
 <ul>
 <li>এক, যে সব প্রোগ্রাম দেখানো আছে বইটাতে, সেগুলো ডাউনলোড করতে পারবে <a href="dnld.html">এখান থেকে</a>
 </li>
 
 <li>দুই, বইয়ের কয়েক জায়গা থেকে বিভিন্ন ভিডিওর QR link  দেওয়া আছে৷ সেগুলোও পাবে নীচে৷</li>
 
-<li>আর তিন, ভুলভ্রান্তি যা বেরোবে, তার তালিকাও দেব এখানে৷</li>
+<li>তিন, যারা Android  দিয়ে C  শিখতে চাও, তারা চাইলে <a href="https://termux.en.softonic.com/android/download">এখান
+ থেকে</a>  ডাউনলোড করতে পারো৷ তবে প্রথমে Google playstore  থেকেই
+ install  করার চেষ্টা কোরো৷ নেহাত যদি তাতে অসুবিধা হয়, তবেই খালি এখান থেকে
+ ডাউনলোড করো৷ এখান থেকে তুমি একটা apk  ফাইল পাবে৷ সেটা তোমার মোবাইলে রেখে
+ tap  করলে install  হবার কথা৷ কিন্তু খুব সম্ভবতঃ তোমার মোবাইল
+ তোমাকে প্রথমে ধমক দিয়ে বলবে-- 'এরকম অজানা অ্যাপ বিপজ্জনক হতে পারে, তাই
+ install  করব না৷'' তখন তোমাকে settings-এ গিয়ে privacy and
+ security-র মধ্যে গিয়ে autoblock  বন্ধ করে দিতে হবে৷ তারপর ডাউনলোড করা
+ apk  ফাইলটায় tap  করলে install  হবে৷ তারপর ফের
+ settings-এ গিয়ে autoblock-টা ফের চালু করে দিও, নইলে আবার কোথা থেকে কোন্
+ দুষ্টু অ্যাপ ঢুকে পড়বে কে জানে! </li>
+
+<li>আর চার, ভুলভ্রান্তি যা বেরোবে, তার তালিকাও দেব এখানে৷</li>
 
 </ul> 
 
