--- a/prob2_2026/cantor.html
+++ b/prob2_2026/cantor.html
@@ -148,7 +148,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Wierd distributions</h3>
 <ul>
 <li>
@@ -186,7 +186,8 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-<title>Wierd distributions</title>
+
+<title xmlns="">Wierd distributions</title>
 
 <h1><a
 name="Different types of distributions">Different types of distributions</a></h1>
@@ -389,7 +390,8 @@ Some books provide the following loose definition of the Cantor distribution:
 They start by defining the <b><font color="red" size="40">Cantor set</font></b>  as $S = \cap_n S_n$.  Then the define the Cantor distribution as
  the uniform distribution on $S$.
 <p></p>
-While this does capture the spirit of the distribution, it is not a rigourous definition, because we have not defined "uniform
+While this does capture the spirit of the distribution, it is not a rigourous definition, because
+ so far we have defined "uniform
  distribution" only for finite sample spaces, and for distributions with densities. The Cantor distribution does not have
  PMF or density (shall show in the next section). So it is not clear what "uniform distribution" means here. 
 <p></p>
@@ -427,7 +429,7 @@ For $E(X)$  we note that $1-X$  is again a Cantor random variable (since flippin
  does not change the $S_n$'s). So by symmetry argument, we have $E(X) = \frac 12$.
 <p></p>
 We need machinery beyond the present syllabus to  compute $E(X^k)$  for general $k\in{\mathbb N}$.
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
