"prithwish prob1 corr"

--- a/prob1_2025/vit.html
+++ b/prob1_2025/vit.html
@@ -5,9 +5,6 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
-
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -176,7 +173,7 @@ $\newcommand{\ev}{{\mathcal F}}$
 name="First taste of measure theory">First taste of measure theory</a></h1>
 If we keep on tossing a coin again and again, we are bound to get head sometime or other (assuming that $P(H)&gt;0$). 
 A proof of this may be given like this:
-<blockquote>Let $A_n$  be the event that the first $n$  tosses have all resulted in heads. Let
+<blockquote>Let $A_n$  be the event that the first $n$  tosses have all resulted in tails. Let
  $A$  be the event that we never get a head. Then clearly $A_n\searrow A$. So by
  continuity of probability we must have $P(A_n)\rightarrow P(A).$  Now $P(A_n) = \left(\frac 12\right)^n \rightarrow
  0.$  Hence $P(A)=0.$  Hence $P(A^c)=1,$  <i>i.e.</i>, we are bound to get a head some time or other.</blockquote>
