--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -1231,10 +1231,37 @@ Here the CDF of $(X,Y)$  is
 $$
 F(x,y)=P(X\leq x,\, Y\leq y) = P(X\leq\min\{x,y\}) = \left\{\begin{array}{ll}0&\text{if }\min\{x,y\}&lt;0\\ \min\{x,y\}&\text{if }0\leq \min\{x,y\} &lt; 1\\ 1&\text{if }\min\{x,y\} \geq 1\\\end{array}\right..
 $$
-Hence, if $(X,Y)$  indeed had a joint density, then a joint density would be given
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/nodens.png"></th>
+</tr>
+<tr>
+<th>Different parts of $F(x,y)$</th>
+</tr>
+</table>
+</center>
+If you'd like to see it in 3D, then here it is:
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/nodens3d.png"></th>
+</tr>
+<tr>
+<th>Surface of $F(x,y)$</th>
+</tr>
+</table>
+</center>
+
+<p></p>
+Now, if $(X,Y)$  indeed had a joint density, then a joint density would be given
  by $f(x,y)$, where 
 $$f(x,y) = \frac{\partial^2}{\partial x\partial y} F(x,y).$$
-This forces $f(x,y)\equiv 0,$  which is not a PDF.
+But the above diagram shows that each part of $F(x,y)$  either does not involve $x$  or does not involve $y.$ 
+ So after partial differentiation wrt both the variables we must have $f(x,y)\equiv 0,$  which is not a PDF (since does
+ not integrate to 1). 
+<p></p>
+This proves that $F(x,y)$  does not admit a density. 
    ■
 </p>
 However, if $(X,Y)$  has a joint density, then both $X$  and $Y$  must also have (marginal) densities.
