--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -1699,7 +1699,7 @@ name="Problem set 16">Problem set 16</a></h2>
 <p>
 <b>EXERCISE 51:</b>&nbsp;Let the dispersion matrix of $(X,Y)$  be $\left[\begin{array}{ccccccccccc}1 &amp; 0\\0 &amp; 2
 \end{array}\right]$. Find
- $\theta\in [0,\pi)$  such that $V(\cos (\theta) X + \sin(\theta) Y)$  is maximum. When is the variance minimum.</p>
+ $\theta\in [0,\pi)$  such that $V(\cos (\theta) X + \sin(\theta) Y)$  is maximum. When is the variance minimum?</p>
 
 <p></p>
  
