--- a/prob2_2026/lecpca.html
+++ b/prob2_2026/lecpca.html
@@ -26,7 +26,7 @@ Then we find the eigenvalues and eigenvectors of this matrix (or
 equivalently of Y'Y).
 <p>
 We shall now carry this out for an image data set [Download the
-data set <a href="https://drive.google.com/file/d/0B-bSIBx-Bg8_bEt3NFc2anVOYkk/edit?usp=sharing">here</a>].
+data set <a href="grayfaces.tar.gz">here</a>].
 <p>
 The data set consists of 50 photos (faces of 5 men and 5 women,
 each photographed 5 times). All the images are in jpg format. So
@@ -184,14 +184,5 @@ for(k in 1:49) {
 Observe that the face is quite recognisable after just 10
 steps. The same is true about the other photos also. Thus the
 intrinsic diemnsion is actually as low as 10, instead of 36000.
-<p>
-The graylevel faces used in class are <a href="https://drive.google.com/file/d/0B-bSIBx-Bg8_bEt3NFc2anVOYkk/edit?usp=sharing">here</a>.
-<p>
-The complete data set (full color facial images)
-is <a href="https://drive.google.com/file/d/0B-bSIBx-Bg8_MEMxejg4QnJmUnc/edit?usp=sharing">here (17M)</a>. 
-<p>
-Also <a href="https://drive.google.com/file/d/0B-bSIBx-Bg8_WlNOSFBwa3RrVVU/edit?usp=sharing">here</a> is a 
-similar data set of digits. Try this method
-to find the intrinsic dimension.  
 </body>
 </html>
