"minor typo fix"

--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -748,7 +748,7 @@ The red-blue-green break up remains the same here as in the last example, as the
  square. The values (0 and 1) of the CDF over the white regions are also as before. 
 <p></p>
 For $(x,y)$  in the red region,
-$$F(x,y) = \int_0^x\int_0^y (u+v)\, dudv  = \int_0^x\frac 12y^2+yv\,dv = \frac 12xy^2+xy.$$
+$$F(x,y) = \int_0^x\int_0^y (u+v)\, dudv  = \int_0^x\frac 12y^2+yv\,dv = \frac 12xy^2+\frac 12x^2y.$$
 Similarly, work out the values for the blue and green regions. ■
 </p>
 
