"cond dens prune"

--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -1830,10 +1830,9 @@ is continuous and positive at  $y.$
 </fieldset>
 It is obvious that this is a density, since it is non-negative, and 
 $\int_{-\infty}^\infty f_{X|Y}(x,y)\, dx = \frac{\int_{-\infty}^\infty f(x,y)\, dx}{f_Y(y)}=1.$
-The most glaring difference between conditional PDF and conditional PMF is that the conditional PDF is not a
- conditional probability,
- since $P(Y=y)=0.$  Due to the same reason,
-$\int_a^bf_{X|Y}(x,y)\, dx$  does not give $P(X\in [a,b]|Y=y),$  as $P(Y=y)=0.$
+The most glaring difference between conditional PDF and conditional PMF is that 
+$\int_a^bf_{X|Y}(x,y)\, dx$  does not give $P(X\in [a,b]|Y=y),$  as this latter quantity
+ isundefined since $P(Y=y)=0.$
 <p></p>
 
 <h2><a
