--- a/prob2_2026/index.html
+++ b/prob2_2026/index.html
@@ -152,6 +152,9 @@ function myFunction() {
 <a href="#Probability II (B1, 2026)">Probability II (B1, 2026)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
+<a href="#Assignments">Assignments</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
 <a href="#Marks distribution">Marks distribution</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
@@ -166,7 +169,17 @@ function myFunction() {
 <h1 xmlns=""><a
 name="Probability II (B1, 2026)">Probability II (B1, 2026)</a></h1>
 URL: https://arnabc74.github.io/prob2_2026/
+<p></p>
 
+<h2><a
+name="Assignments">Assignments</a></h2>
+Here is a assignment 1. If your roll number is <b>bs2xxxx</b>, then download the assignment from the following address:
+<blockquote>https://arnabc.github.io/prob2_2026/a1_bs2xxxx.html</blockquote>
+There will be 10 problems (all from the class webpage). These are randomly assigned (and hence fairly, even though the difficulty
+ levels may be somewhat different). Anyway, each student is supposed to solve all the problems in the class webpage. 
+<p></p>
+You must submit your own handwritten solutions. Discussions are allowed (and even encouraged). You
+ must submit before the midsem starts.  This assignment carries 10 marks.
 <h2><a
 name="Marks distribution">Marks distribution</a></h2>
 
