--- a/prob2_2026/index.html
+++ b/prob2_2026/index.html
@@ -174,7 +174,7 @@ URL: https://arnabc74.github.io/prob2_2026/
 <h2><a
 name="Assignments">Assignments</a></h2>
 Here is a assignment 1. If your roll number is <b>bs2xxxx</b>, then download the assignment from the following address:
-<blockquote>https://arnabc.github.io/prob2_2026/a1_bs2xxxx.html</blockquote>
+<blockquote>https://arnabc74.github.io/prob2_2026/a1_bs2xxxx.html</blockquote>
 There will be 10 problems (all from the class webpage). These are randomly assigned (and hence fairly, even though the difficulty
  levels may be somewhat different). Anyway, each student is supposed to solve all the problems in the class webpage. 
 <p></p>
