--- a/prob2_2026/contabs.html
+++ b/prob2_2026/contabs.html
@@ -5,9 +5,6 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
-
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -491,7 +488,7 @@ To complete the proof we need to show that $X$  has PDF $f(x),$  <i>i.e.</i>,
 <div class="box">Target</div>$\forall a \leq b~~P(a \leq X \leq b) = \int_a^b f(t)\, dt.$
 <p></p>
 
-<div class="box">$\forall a,b$</div> Take any $a\leq b.$
+<div class="box">$\forall a,b$</div>Take any $a\leq b.$
 <p></p>
 Here $F$  is a continuous function. So $P(X=a) = 0.$
 <p></p>
@@ -796,12 +793,12 @@ name="Problem set 7">Problem set 7</a></h2>
 ::<p>
 <b>EXERCISE 27:</b>&nbsp;
 If $X$  has density $e^{-x}$  for $x&gt;0$  (and 0 else), then show that 
-$$\lim_{\epsilon\rightarrow0+}\frac{P(1-\epsilon,1+\epsilon)}{2 \epsilon} = \frac 1e.$$
+$$\lim_{\epsilon\rightarrow0+}\frac{P\big(X\in(1-\epsilon,1+\epsilon)\big)}{2 \epsilon} = \frac 1e.$$
 </p>
 ::<p>
 <b>EXERCISE 28:</b>&nbsp;
 If $X$  has density $e^{-x}$  for $x&gt;0$  (and 0 else), then show that 
-$$\lim_{\epsilon\rightarrow0+}\frac{P[2,2+\epsilon)}{\epsilon} = e^{-2}.$$
+$$\lim_{\epsilon\rightarrow0+}\frac{P\big(X\in[2,2+\epsilon)\big)}{\epsilon} = e^{-2}.$$
 </p>
 
 <p></p>
@@ -809,7 +806,7 @@ $$\lim_{\epsilon\rightarrow0+}\frac{P[2,2+\epsilon)}{\epsilon} = e^{-2}.$$
 <p>
 <b>EXERCISE 29:</b>&nbsp;
 If $X$  has density $f(x)$  which is continuous over a neighbourhood of $x=a,$  then prove that
-$$\lim_{\epsilon\rightarrow0+}\frac{P(a-\epsilon,a+\epsilon)}{2 \epsilon} = f(a).$$
+$$\lim_{\epsilon\rightarrow0+}\frac{P\big(X\in(a-\epsilon,a+\epsilon)\big)}{2 \epsilon} = f(a).$$
 Can you drop the continuity assumption?
 </p>
 
@@ -818,7 +815,7 @@ Can you drop the continuity assumption?
 <p>
 <b>EXERCISE 30:</b>&nbsp;
 Let $X$  have density $f(x)=\left\{\begin{array}{ll}1&\text{if }x\in(0,1)\\ 0&\text{otherwise.}\end{array}\right.$  Find 
-$$\lim_{\epsilon\rightarrow0+}\frac{P(1-\epsilon,1+\epsilon)}{2 \epsilon}.$$  
+$$\lim_{\epsilon\rightarrow0+}\frac{P\big(X\in(1-\epsilon,1+\epsilon)\big)}{2 \epsilon}.$$  
 </p>
 
 <h1><a
