--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -1368,7 +1368,8 @@ Similarly, $Y=1$  or $0$  according as the second toss shows head or not. $Z=X$ 
 
 <p>
 <b>EXERCISE 38:</b>&nbsp;If the joint density of $(X,Y)$  is of the form $f(x)g(y),$  then show that
- $X$  and $Y$  must be independent. Also show that $f_X\propto f$  and $f_Y\propto g.$</p>
+ $X$  and $Y$  must be independent. Also show that $X$  has a density
+ proportional to $f$,   and $Y$  has a density proportional to  $g.$</p>
 
 <p></p>
 
