--- a/prob2_2026/cdistrib2.html
+++ b/prob2_2026/cdistrib2.html
@@ -5,9 +5,6 @@
 <link type="text/css" rel="stylesheet" href="../tools/style.css"/>
 <style type="text/css">@font-face {font-family: SHREE_BAN_OTF_0592;src: local("../tools/SHREE_BAN_OTF_0592"),url(../tools/SHREE-BAN-OTF-new.woff) format("opentype");</style>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v19.0" nonce="Q7jTbrCq"></script>
-
 <script src="../tools/jquery-1.10.2.min.js"></script>
 
 <script>
@@ -148,7 +145,7 @@ function myFunction() {
 <script src="../tools/rglWebGL.js"></script>
 </head><body>
 <div class="sticky" id="topholder"> </div>
-<a href="http://www.isical.ac.in/~arnabc/">[Home]</a>
+<a href="http://web.isical.ac.in/~arnabc/">[Home]</a>
 <h3>Some more standard densities</h3>
 <ul>
 <li>
@@ -204,7 +201,8 @@ function myFunction() {
 </li>
 </ul>
 <hr/>
-<title>Some more standard densities</title>
+
+<title xmlns="">Some more standard densities</title>
 
 <p></p>
 
@@ -823,7 +821,7 @@ name="Maxwell's derivation of the normal distribution">Maxwell's derivation of t
 Generally, Gauss is credited with the "discovery" of the normal distribution, which he derived via his famous central limit
  theorem. However, a lesser known derivation is due to James Clerk Maxwell, which we shall discuss now. 
 <p></p>
-Imagine a gas without any overall flow. We know that the molecules are moving tis way and that
+Imagine a gas without any overall flow. We know that the molecules are moving this way and that
  randomly. Maxwell was interested in
  finding the distribution of velocities. Of course, he had no way of grabbing a molecule and measuring its velocity. So he
  did a brilliant logical argument starting with little more than common sense notions available to anybody. 
@@ -981,7 +979,7 @@ You may leave the answers in terms the $N(0,1)$  CDF $\Phi(x)$  or its inverse $
 <b>EXERCISE 64:</b>&nbsp;<font size="-2">[wilks10.png]</font><img width="" src="image/wilks10.png" style="vertical-align:text-top;"></p>
 
 <p></p>
-<hr/>
+<hr xmlns="http://www.w3.org/1999/xhtml"/>
 <table width="100%" border="0">
 <tr>
 <td align="left"/>
