--- a/prob2_2026/cdistrib1.html
+++ b/prob2_2026/cdistrib1.html
@@ -382,21 +382,10 @@ So $G(y) = P(X\leq b) = F(b) =y,$
 <p></p>
 
 <u>Case 3</u>: Consider $y = 0.$
+Since we have show $G(y) = y$  for $y\in (0,1)$  and since $G(y)$  is right continuous, hence we must have
+ $G(0) = 0.$
 <p></p>
-A very similar argument shows that  $G(0) = 0.$
-<blockquote><a
-href="javascript:hideShow('reason3')"><b>[Because...]</b></a><div
-class="ans" id="reason3">
-If $F(x)$  never attains the value 0, then clearly $G(0)=0.$  
-<p></p>
-Otherwise, we can use the sup argument as in case 2: Let $a = \sup\{x~:~F(x)\leq 0\}$, which
- is defined since $F(x)$  attains the value 0. 
-<p></p>
-Then 
- $G(0) = P(Y\leq 0) = P(F(X)\leq 0) =
- P(X\leq a) = F(a) = 0,$  by continuity argument as in case 2.
-</div></blockquote>
-So $G(y)$ is the $Unif(0,1)$  CDF, as required. 
+So, combining the three cases, $G(y)$ is the $Unif(0,1)$  CDF, as required. 
 <b><i>[QED]</i></b>
 </p>
 
