--- a/prob2_2026/cdistrib1.html
+++ b/prob2_2026/cdistrib1.html
@@ -486,7 +486,7 @@ This shows that if we can show the existence of (or generate random numbers from
 name="Problem set 3">Problem set 3</a></h2>
 
 <p>
-<b>EXERCISE 7:</b>&nbsp;Show that $F^-$  is a non-decreasing.</p>
+<b>EXERCISE 7:</b>&nbsp;Show that $F^-$  is non-decreasing.</p>
 
 <p></p>
 ::<p>
@@ -537,7 +537,7 @@ name="Problem set 4">Problem set 4</a></h2>
 <p></p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;If $1-X\sim Expo(\lambda)$, then show that $[X]$  has a geometric distribution.
+<b>EXERCISE 12:</b>&nbsp;If $X\sim Expo(\lambda)$, then show that $[X]$  has a geometric distribution.
  Find the parameter of the Geometric distribution.</p>
 
 <p></p>
