--- a/prob2_2026/cdistrib1.html
+++ b/prob2_2026/cdistrib1.html
@@ -537,7 +537,7 @@ name="Problem set 4">Problem set 4</a></h2>
 <p></p>
 
 <p>
-<b>EXERCISE 12:</b>&nbsp;If $X\sim Expo(\lambda)$, then show that $[X]$  has a geometric distribution.
+<b>EXERCISE 12:</b>&nbsp;If $X-1\sim Expo(\lambda)$, then show that $[X]$  has a geometric distribution.
  Find the parameter of the Geometric distribution.</p>
 
 <p></p>
