--- a/prob2_2026/cdistrib1.html
+++ b/prob2_2026/cdistrib1.html
@@ -586,8 +586,8 @@ Similarly, one may show that $Expo(\lambda)$  is the only memoryless distributio
 name="Problem set 5">Problem set 5</a></h2>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;Consider the $Geom(\theta)$  distribution supported on $\{0,1,2,3,...\}.$  It is the number of tails you get
- before the first head in an IID sequence of tosses of a coin with $P(head)=\theta.$  
+<b>EXERCISE 14:</b>&nbsp;Consider the $Geom(\theta)$  distribution supported on $\{1,2,3,...\}.$  It is the number of tosses you need
+to get the first head in an IID sequence of tosses of a coin with $P(head)=\theta.$  
 Show that if $X\sim Expo(\lambda)$  then $\lceil X\rceil\sim(Geom(\theta).$   Express $\theta$  in terms of
  $\lambda.$
 </p>
@@ -596,7 +596,7 @@ Show that if $X\sim Expo(\lambda)$  then $\lceil X\rceil\sim(Geom(\theta).$   Ex
 
 <p>
 <b>EXERCISE 15:</b>&nbsp;
-then the only discrete memoryless distribution is $Geom(\theta)$  distribution supported on $\{0\}\cup{\mathbb N}$  (counting
+The only discrete memoryless distribution is $Geom(\theta)$  distribution supported on $\{0\}\cup{\mathbb N}$  (counting
  number of failures before the first success). Show that this geometric is the distribution of $\lfloor X\rfloor$  for
  $X\sim Expo(\lambda).$
 </p>
