"gamma mgf etc"

--- a/prob2_2026/cdistrib1.html
+++ b/prob2_2026/cdistrib1.html
@@ -646,7 +646,7 @@ The gamma function has an interesting property similar to that of factorials.
 
 <p>
 <b><i>Proof:</i></b>
-Use integration by parts to show the first result. Then use it (an induction) to prove the second.
+Use integration by parts to show the first result. Then use it (and induction) to prove the second.
 <b><i>[QED]</i></b>
 </p>
 It is easy to show (using the substitution $u = px$) that 
