--- a/prob2_2026/cjoint.html
+++ b/prob2_2026/cjoint.html
@@ -856,8 +856,8 @@ $\forall x,y\in{\mathbb R}~~\forall a,b \geq 0~~ F(x,y)-F(x,y-b)-F(x-a,y)+F(x-a,
 
 <p>
 <b><i>Proof:</i></b>
-Let $A = \{x-a &lt; X \leq x,\, y-b &lt; Y \leq y\}$, $B = \{x-a &lt; X \leq x,\, Y \leq y\}$, $C = \{ X \leq x,\, y-b &lt; Y \leq y\}$,
- and $C = \{ X \leq x-a,\, Y \leq y-b\}.$
+Let $A = \{x-a &lt; X \leq x,\, y-b &lt; Y \leq y\}$, $B = \{x-a &lt; X \leq x,\, Y \leq y-b\}$, $C = \{ X \leq x-a,\, y-b &lt; Y \leq y\}$,
+ and $D = \{ X \leq x-a,\, Y \leq y-b\}.$
 <center>
 <table width="100%">
 <tr>
